tests/golden/type_errors/adt_non_exhaustive.cd
enum Result { Ok(number), Empty }
let result = Result.Ok(1);
match result {
  Result.Ok(value) => { print value; }
}
