tests/golden/type_errors/adt_non_exhaustive.err
Type error at 3:7: non-exhaustive match: missing Result.Empty
  match result {
        ^
